--- a/src/main/resources/documenu_application.fxml
+++ b/src/main/resources/documenu_application.fxml
@@ -15,14 +15,15 @@
             <HBox alignment="TOP_CENTER" spacing="3">
                 <Label fx:id="lblEnterZip" text="Enter Zip Code: "/>
                 <TextField fx:id="tfEnterZip"/>
+                <Label fx:id="lblCuisines" text="Enter Cuisine: "/>
                 <ComboBox fx:id="cbCuisines" promptText="Select Cuisine">
                     <items>
                         <FXCollections fx:factory="observableArrayList">
-                            <String fx:value = "Italian"/>
-                            <String fx:value = "Chinese"/>
-                            <String fx:value = "American"/>
-                            <String fx:value = "Sandwiches"/>
-                            <String fx:value = "Ice Cream"/>
+                            <String fx:value="Italian"/>
+                            <String fx:value="Chinese"/>
+                            <String fx:value="American"/>
+                            <String fx:value="Sandwiches"/>
+                            <String fx:value="Ice Cream"/>
                         </FXCollections>
                     </items>
                 </ComboBox>
@@ -41,52 +42,67 @@
             <Label fx:id="name3" text="Restaurant" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
             <Label fx:id="name4" text="Restaurant" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
 
-            <Label fx:id="phone0" text="123-456-7890" textAlignment="center" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-            <Label fx:id="phone1" text="123-456-7890" textAlignment="center" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-            <Label fx:id="phone2" text="123-456-7890" textAlignment="center" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-            <Label fx:id="phone3" text="123-456-7890" textAlignment="center" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-            <Label fx:id="phone4" text="123-456-7890" textAlignment="center" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+            <Label fx:id="phone0" text="123-456-7890" textAlignment="center" GridPane.columnIndex="0"
+                   GridPane.rowIndex="1"/>
+            <Label fx:id="phone1" text="123-456-7890" textAlignment="center" GridPane.columnIndex="1"
+                   GridPane.rowIndex="1"/>
+            <Label fx:id="phone2" text="123-456-7890" textAlignment="center" GridPane.columnIndex="2"
+                   GridPane.rowIndex="1"/>
+            <Label fx:id="phone3" text="123-456-7890" textAlignment="center" GridPane.columnIndex="3"
+                   GridPane.rowIndex="1"/>
+            <Label fx:id="phone4" text="123-456-7890" textAlignment="center" GridPane.columnIndex="4"
+                   GridPane.rowIndex="1"/>
 
-            <Label fx:id="website0" text="www.eat.com" textAlignment="center" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-            <Label fx:id="website1" text="www.eat.com" textAlignment="center" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-            <Label fx:id="website2" text="www.eat.com" textAlignment="center" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-            <Label fx:id="website3" text="www.eat.com" textAlignment="center" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
-            <Label fx:id="website4" text="www.eat.com" textAlignment="center" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
+            <Label fx:id="website0" text="www.eat.com" textAlignment="center" GridPane.columnIndex="0"
+                   GridPane.rowIndex="2"/>
+            <Label fx:id="website1" text="www.eat.com" textAlignment="center" GridPane.columnIndex="1"
+                   GridPane.rowIndex="2"/>
+            <Label fx:id="website2" text="www.eat.com" textAlignment="center" GridPane.columnIndex="2"
+                   GridPane.rowIndex="2"/>
+            <Label fx:id="website3" text="www.eat.com" textAlignment="center" GridPane.columnIndex="3"
+                   GridPane.rowIndex="2"/>
+            <Label fx:id="website4" text="www.eat.com" textAlignment="center" GridPane.columnIndex="4"
+                   GridPane.rowIndex="2"/>
 
-            <Label fx:id="address0" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-            <Label fx:id="address1" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-            <Label fx:id="address2" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-            <Label fx:id="address3" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
-            <Label fx:id="address4" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="4" GridPane.rowIndex="3"/>
+            <Label fx:id="address0" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="0"
+                   GridPane.rowIndex="3"/>
+            <Label fx:id="address1" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="1"
+                   GridPane.rowIndex="3"/>
+            <Label fx:id="address2" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="2"
+                   GridPane.rowIndex="3"/>
+            <Label fx:id="address3" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="3"
+                   GridPane.rowIndex="3"/>
+            <Label fx:id="address4" text="1 Eata Way, Brooklyn NY" textAlignment="center" GridPane.columnIndex="4"
+                   GridPane.rowIndex="3"/>
 
             <fx:define>
                 <ArrayList fx:id="names">
-                    <fx:reference source="name0"/>
-                    <fx:reference source="name1"/>
-                    <fx:reference source="name2"/>
-                    <fx:reference source="name3"/>
-                    <fx:reference source="name4"/>
+                    <fx:reference source="name0" styleClass="names"/>
+                    <fx:reference source="name1" styleClass="names"/>
+                    <fx:reference source="name2" styleClass="names"/>
+                    <fx:reference source="name3" styleClass="names"/>
+                    <fx:reference source="name4" styleClass="names"/>
                 </ArrayList>
                 <ArrayList fx:id="phones">
-                    <fx:reference source="phone0"/>
-                    <fx:reference source="phone1"/>
-                    <fx:reference source="phone2"/>
-                    <fx:reference source="phone3"/>
-                    <fx:reference source="phone4"/>
+                    <fx:reference source="phone0" styleClass="rInfo"/>
+                    <fx:reference source="phone1" styleClass="rInfo"/>
+                    <fx:reference source="phone2" styleClass="rInfo"/>
+                    <fx:reference source="phone3" styleClass="rInfo"/>
+                    <fx:reference source="phone4" styleClass="rInfo"/>
                 </ArrayList>
                 <ArrayList fx:id="websites">
-                    <fx:reference source="website0"/>
-                    <fx:reference source="website1"/>
-                    <fx:reference source="website2"/>
-                    <fx:reference source="website3"/>
-                    <fx:reference source="website4"/>
+                    <fx:reference source="website0" styleClass="rInfo"/>
+                    <fx:reference source="website1" styleClass="rInfo"/>
+                    <fx:reference source="website2" styleClass="rInfo"/>
+                    <fx:reference source="website3" styleClass="rInfo"/>
+                    <fx:reference source="website4" styleClass="rInfo"/>
                 </ArrayList>
                 <ArrayList fx:id="addresses">
-                    <fx:reference source="address0"/>
-                    <fx:reference source="address1"/>
-                    <fx:reference source="address2"/>
-                    <fx:reference source="address3"/>
-                    <fx:reference source="address4"/>
+                    <fx:reference source="address0" styleClass="rInfo"/>
+                    <fx:reference source="address1" styleClass="rInfo"/>
+                    <fx:reference source="address2" styleClass="rInfo"/>
+                    <fx:reference source="address3" styleClass="rInfo"/>
+                    <fx:reference source="address4" styleClass="rInfo"/>
                 </ArrayList>
 
             </fx:define>
