--- a/src/main/resources/documenu_application.fxml
+++ b/src/main/resources/documenu_application.fxml
@@ -37,10 +37,10 @@
         <GridPane alignment="CENTER" hgap="16" vgap="4">
 
             <Label fx:id="name0" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <Label fx:id="name1"  GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-            <Label fx:id="name2"  GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+            <Label fx:id="name1" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <Label fx:id="name2" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
             <Label fx:id="name3" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
-            <Label fx:id="name4"  GridPane.columnIndex="4" GridPane.rowIndex="0"/>
+            <Label fx:id="name4" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
 
             <Label fx:id="phone0" textAlignment="center" GridPane.columnIndex="0"
                    GridPane.rowIndex="1"/>
@@ -50,27 +50,27 @@
                    GridPane.rowIndex="1"/>
             <Label fx:id="phone3" textAlignment="center" GridPane.columnIndex="3"
                    GridPane.rowIndex="1"/>
-            <Label fx:id="phone4"  textAlignment="center" GridPane.columnIndex="4"
+            <Label fx:id="phone4" textAlignment="center" GridPane.columnIndex="4"
                    GridPane.rowIndex="1"/>
 
-            <Label fx:id="website0" textAlignment="center" GridPane.columnIndex="0"
-                   GridPane.rowIndex="2"/>
-            <Label fx:id="website1"  textAlignment="center" GridPane.columnIndex="1"
-                   GridPane.rowIndex="2"/>
-            <Label fx:id="website2" textAlignment="center" GridPane.columnIndex="2"
-                   GridPane.rowIndex="2"/>
-            <Label fx:id="website3" textAlignment="center" GridPane.columnIndex="3"
-                   GridPane.rowIndex="2"/>
-            <Label fx:id="website4" textAlignment="center" GridPane.columnIndex="4"
-                   GridPane.rowIndex="2"/>
+            <TextField fx:id="website0" GridPane.columnIndex="0"
+                       GridPane.rowIndex="2"/>
+            <TextField fx:id="website1" GridPane.columnIndex="1"
+                       GridPane.rowIndex="2"/>
+            <TextField fx:id="website2" GridPane.columnIndex="2"
+                       GridPane.rowIndex="2"/>
+            <TextField fx:id="website3" GridPane.columnIndex="3"
+                       GridPane.rowIndex="2"/>
+            <TextField fx:id="website4" GridPane.columnIndex="4"
+                       GridPane.rowIndex="2"/>
 
-            <Label fx:id="address0"  textAlignment="center" GridPane.columnIndex="0"
+            <Label fx:id="address0" textAlignment="center" GridPane.columnIndex="0"
                    GridPane.rowIndex="3"/>
-            <Label fx:id="address1"  textAlignment="center" GridPane.columnIndex="1"
+            <Label fx:id="address1" textAlignment="center" GridPane.columnIndex="1"
                    GridPane.rowIndex="3"/>
-            <Label fx:id="address2"  textAlignment="center" GridPane.columnIndex="2"
+            <Label fx:id="address2" textAlignment="center" GridPane.columnIndex="2"
                    GridPane.rowIndex="3"/>
-            <Label fx:id="address3"  textAlignment="center" GridPane.columnIndex="3"
+            <Label fx:id="address3" textAlignment="center" GridPane.columnIndex="3"
                    GridPane.rowIndex="3"/>
             <Label fx:id="address4" textAlignment="center" GridPane.columnIndex="4"
                    GridPane.rowIndex="3"/>
@@ -91,11 +91,11 @@
                     <fx:reference source="phone4" styleClass="rInfo"/>
                 </ArrayList>
                 <ArrayList fx:id="websites">
-                    <fx:reference source="website0" styleClass="rInfo"/>
-                    <fx:reference source="website1" styleClass="rInfo"/>
-                    <fx:reference source="website2" styleClass="rInfo"/>
-                    <fx:reference source="website3" styleClass="rInfo"/>
-                    <fx:reference source="website4" styleClass="rInfo"/>
+                    <fx:reference source="website0"/>
+                    <fx:reference source="website1"/>
+                    <fx:reference source="website2"/>
+                    <fx:reference source="website3"/>
+                    <fx:reference source="website4"/>
                 </ArrayList>
                 <ArrayList fx:id="addresses">
                     <fx:reference source="address0" styleClass="rInfo"/>
